c4prj2_input/grade.txt
Grading at Sat Aug  3 07:47:22 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:30:4: error: invalid use of void expression
    puts(print_card(*deck->cards[i])); // TODO
    ^
Compilation of future.c failed

Overall Grade: F
